save work, strict link validation, imageUri validation etc